<resources>
    <string name="app_name">My Application</string>
    <string name="nom">Nom</string>
    <string name="age">Âge</string>
    <string name="prenom">Prénom</string>
    <string name="num">Numéro Téléphone</string>
    <string name="mdp">Mot de Passe</string>
    <string name="mainButton">Inscription</string>
    <string name="toast">Inscription Réussie</string>
    <string name="notInscrit">Veuillez remplir tout les champs</string>
    <string name="savedInstance">SaveIntanceState</string>
    <string name="ButtonSoumettre">Soumettre</string>
    <string name="onResume">On Resume +1</string>
    <string name="planningButton">Afficher Planning</string>
    <string name="fillDataButton">Renouveller les données</string>
    <string name="saveMessage">Données sauvegardées</string>
    <string name="doubleDot">" : "</string>
</resources>