<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription">


    <LinearLayout
        android:id="@+id/LinearNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/LinearPrenom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/EditTextNom"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/nom"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/LinearAge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom" />

        <EditText
            android:id="@+id/EditTextPrenom"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prenom"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />

        <EditText
            android:id="@+id/EditTextAge"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/age"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearNumTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearAge">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num" />

        <EditText
            android:id="@+id/EditTextNumTel"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/num"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearNumTel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mdp" />

        <EditText
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mdp"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/InscriptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/mainButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearPassword" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/ButtonSoumettre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/InscriptionButton" />

    <Button
        android:id="@+id/PlanningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/planningButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SubmitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>